# Darwins-Wardrobe

./: README.md
Darwins-Wardrobe/Android/CarrotSticks/: settings.gradle.kts
Darwins-Wardrobe/Android/CarrotSticks/app/: build.gradle.kts
Darwins-Wardrobe/Android/CarrotSticks/app/src/main/: AndroidManifest.xml
Darwins-Wardrobe/Android/CarrotSticks/app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  TextureAsset.cpp  Utility.cpp  main.cpp
Darwins-Wardrobe/Android/CarrotSticks/app/src/main/res/values/: strings.xml  themes.xml
Darwins-Wardrobe/Android/CarrotSticks/app/src/main/res/values-night/: themes.xml
Darwins-Wardrobe/Android/CarrotSticks/gradle/wrapper/: gradle-wrapper.properties
Darwins-Wardrobe/Android/MyNativeCApplication/: settings.gradle.kts
Darwins-Wardrobe/Android/MyNativeCApplication/app/: build.gradle.kts
Darwins-Wardrobe/Android/MyNativeCApplication/app/src/main/: AndroidManifest.xml
Darwins-Wardrobe/Android/MyNativeCApplication/app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
Darwins-Wardrobe/Android/MyNativeCApplication/app/src/main/res/drawable/: ic_launcher_background.xml
Darwins-Wardrobe/Android/MyNativeCApplication/gradle/wrapper/: gradle-wrapper.properties
Outfisual/Android/MyNativeCApplication/app/: build.gradle.kts
Outfisual/Android/MyNativeCApplication/app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  main.cpp
Outfisual/Android/MyNativeCApplication/app/src/main/res/values/: themes.xml
Outfisual/Android/MyNativeCApplication/gradle/: libs.versions.toml
Outfisual/iOS/: hello.txt
(+8 files in other folders)
